<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Final Space</string>
    <string name="episodes">Episodes</string>
    <string name="quotes">Quotes</string>
    <string name="settings">Settings</string>
    <string name="sync_data">Sync data</string>
    <string name="no_data_available_sync_your_data_first">No data found</string>
    <string name="episodeName">This is episode</string>
    <string name="episodeAirDate">Air date: %1$s</string>
    <string name="episodeDirector">Director: %1$s</string>
    <string name="episodeWriter">Writer: %1$s</string>
    <string name="visitAPI">Visit API</string>
    <string name="visitAPISummary">Click to visit API website</string>
    <string name="downloadData">Download data manually</string>
    <string name="downloadDataSummary">Click to download data</string>
    <string name="dataDownloadCategory">Data downloading</string>
    <string name="appTheme">Application theme</string>
    <string name="chooseAppTheme">Choose application theme</string>
    <string name="autoSync">Automatic download</string>
    <string name="autoSyncSummary">Download data when app is turned on</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="authorName">Boris Engler</string>
    <string name="about">About</string>
    <string name="theme">Theme</string>
    <string name="dialogTitle">Leave?</string>
    <string name="dialogLeaveApp">This will take you outside the app. Proceed?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dataDownloaded">Data downloaded</string>
    <string name="unableToSync">Unable to sync data</string>
    <string name="search">Search</string>
    <string name="systemDefault">System default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
</resources>