<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xlarge"
                android:text="@string/author"
                android:textSize="@dimen/textLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <Button
                android:id="@+id/syncAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large"
                android:text="@string/downloadData"
                app:layout_constraintTop_toBottomOf="@+id/author"
                app:layout_constraintBottom_toTopOf="@+id/autoSync"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Button"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/autoSync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large"
                android:layout_marginBottom="@dimen/large"
                android:text="@string/autoSync"
                android:textSize="@dimen/textLarge"
                app:layout_constraintBottom_toTopOf="@+id/API"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/syncAll"
                />

            <Button
                android:id="@+id/API"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large"
                android:layout_marginBottom="@dimen/large"
                android:text="@string/visitAPI"
                app:layout_constraintEnd_toEndOf="@+id/syncAll"
                app:layout_constraintStart_toStartOf="@+id/syncAll"
                app:layout_constraintTop_toBottomOf="@+id/autoSync"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="Button"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>
